src/test/deca/context/invalid/created/decl_class/super_pas_class.deca
// Description :
//    redéfinition type retour pas sous_type
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 8 : (1.3) Identificateur de classe attendu

class B extends int{}